infra/k8s/client-depl.yaml
apiVersion: apps/v1   
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: edendattox/client
---
apiVersion: v1 
kind: Service
metadata:
  name: client-srv  
spec: 
  selector:  
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
